# actix-diesel-async-starter

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  schema.sql
.github/workflows/: cd.yml  ci.yml
api/: Cargo.toml
api/src/: error.rs  lib.rs  openapi.rs  response.rs  websocket.rs
api/src/middlewares/: auth.rs  mod.rs
api/src/routes/: mod.rs
api/src/routes/auth/: mod.rs
api/src/routes/users/: mod.rs
api/src/utils/: cookie.rs
api/tests/: cookie_tests.rs
app/: Cargo.toml
app/src/: error.rs  healthcheck.rs  lib.rs
app/src/domains/: mod.rs
app/src/domains/auth/: dtos.rs  mod.rs
app/src/domains/users/: dtos.rs  mod.rs
app/src/utils/: cache.rs  file_magic.rs  mod.rs  pagination.rs  serde_utils.rs
app/src/validation/: mod.rs
app/tests/: raw_sql_integration.rs
config/: default.toml  development.toml  production.toml  test.toml
docs/: README.md  context.md  guide.md  resources.md
domain/: README.md
infra/: Cargo.toml
infra/src/: lib.rs  postgis_ext.rs  settings.rs
infra/src/db/: mod.rs
infra/src/models/: mod.rs  otp.rs  user.rs
infra/src/schema/: mod.rs  public.rs
infra/src/services/: auth.rs  bg_worker.rs  cron_worker.rs  email.rs  frogsms.rs  mod.rs  redis.rs  websocket.rs
migrations/2024-01-01-000000_init/: down.sql  up.sql
migrations/2026-03-17-141031-0000_foundation/: down.sql  up.sql
migrations/2026-03-17-141220-0000_users/: down.sql  up.sql
migrations/2026-03-17-142647-0000_otps/: down.sql  up.sql
migrator/: Cargo.toml
migrator/src/: main.rs
scripts/: seed.py
scripts/seed/: bus61.json
src/: main.rs
tests/postman/: collection.json  env.ci.json
tests/postman/collections/: 02_auth.json
