[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { workspace = true, features = ["secure-cookies"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
app = { workspace = true }
bitcode = { workspace = true }
config = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-actix-web = "0.7.19"
utoipa = { workspace = true }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
infra = { workspace = true }
actix-cors = "0.7"
actix-governor = "0.10.0"
actix-ws = "0.4.0"
tokio = { workspace = true, features = ["sync"] }
actix-web-validator = "7.0.0"
validator = { workspace = true, features = ["derive"] }
bytes = { workspace = true }
derive_more = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
diesel = { workspace = true, features = ["postgres", "postgres_backend"] }
diesel-async = { workspace = true, features = ["postgres", "deadpool"] }
chrono = { workspace = true, features = ["serde"] }
hex = { workspace = true }
