[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
chrono = { workspace = true, features = ["serde"] }
bitcode = { workspace = true }
utoipa = { workspace = true }
rand = { workspace = true }
diesel = { workspace = true, features = ["postgres", "postgres_backend"] }
diesel-async = { workspace = true, features = ["postgres", "deadpool"] }
postgis_diesel = { workspace = true }
derive_more = { workspace = true, features = ["full"] }
infra = { workspace = true }
tracing = { workspace = true }
futures-util = { workspace = true }
validator = { workspace = true, features = ["derive"] }
regex = "1"
tokio = { workspace = true, features = ["fs"] }
infer = "0.19.0"
anyhow = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
ci = []
